Fixed bug where you could hang type was four fingers in three finger pocket. Changed lapseTimeChronometer to update totalTimeChronometer too

--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -31,6 +31,7 @@
                 android:id="@+id/gradTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="-20dp"
                 android:text="TextView"
                 android:textAlignment="center"
                 android:textSize="25dp" />
