--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/darker_gray"
+    android:keepScreenOn="true"
+    android:orientation="horizontal"
     tools:context="com.example.laakso.hangboardapp.WorkoutActivity">
 
     <LinearLayout
