--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,7 +79,7 @@
                     android:ems="10"
                     android:hint="how many different grips in a lap preferably less than six"
                     android:inputType="number"
-                    android:text="6 grips" />
+                    android:text="6" />
 
                 <EditText
                     android:id="@+id/hangAmountEditText"
@@ -89,7 +89,7 @@
                     android:ems="10"
                     android:hint="number of total hangs in a set"
                     android:inputType="number"
-                    android:text="6 hangs" />
+                    android:text="6" />
 
                 <EditText
                     android:id="@+id/timeONeditText"
@@ -99,7 +99,8 @@
                     android:ems="10"
                     android:hint="In a single set how many seconds to hang"
                     android:inputType="number"
-                    android:text="7 on" />
+                    android:text="7"
+                    android:textColor="@android:color/holo_red_light" />
 
                 <EditText
                     android:id="@+id/timeOFFeditText"
@@ -109,7 +110,8 @@
                     android:ems="10"
                     android:hint="in a single set how many seconds to rest"
                     android:inputType="number"
-                    android:text="3 off" />
+                    android:text="3"
+                    android:textColor="@android:color/holo_green_dark"/>
             </LinearLayout>
 
             <LinearLayout
@@ -130,7 +132,7 @@
                     android:ems="10"
                     android:hint="number of total laps"
                     android:inputType="number"
-                    android:text="3 laps" />
+                    android:text="3" />
 
                 <EditText
                     android:id="@+id/restTimeEditText"
@@ -140,7 +142,8 @@
                     android:ems="10"
                     android:hint="rest time between different grips"
                     android:inputType="number"
-                    android:text="150 rest time" />
+                    android:text="150"
+                    android:textColor="@android:color/holo_green_dark"/>
 
                 <EditText
                     android:id="@+id/longRestEditText"
@@ -150,7 +153,8 @@
                     android:ems="10"
                     android:hint="long rest time between laps"
                     android:inputType="number"
-                    android:text="600 long rest" />
+                    android:text="600"
+                    android:textColor="@android:color/holo_green_dark"/>
 
             </LinearLayout>
 
