--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -19,15 +19,17 @@
             android:layout_height="match_parent"
             android:layout_weight="0"
             android:orientation="vertical"
-            android:paddingLeft="4dp">
+            android:paddingLeft="0dp">
 
             <ImageView
                 android:id="@+id/boardImageView"
-                android:layout_width="350dp"
-                android:layout_height="187dp"
+                android:layout_width="400dp"
+                android:layout_height="175dp"
+                android:layout_marginRight="0dp"
+                android:paddingRight="0dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/lauta1000" />
+                app:srcCompat="@drawable/lauta1011" />
 
             <TextView
                 android:id="@+id/gradTextView"
@@ -36,6 +38,7 @@
                 android:layout_marginTop="-20dp"
                 android:text="TextView"
                 android:textAlignment="center"
+                android:textColor="@android:color/black"
                 android:textSize="25dp" />
 
             <ProgressBar
@@ -44,14 +47,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="59dp"
                 android:indeterminate="false"
+                android:paddingLeft="5dp"
                 android:scaleY="10"
                 android:visibility="visible" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="220dp"
+            android:layout_width="268dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="0dp"
             android:layout_weight="0"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
@@ -61,8 +66,7 @@
                 android:id="@+id/totalTimeChrono"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:textAlignment="center"
+                android:textAlignment="viewStart"
                 android:textSize="25dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -72,9 +76,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="30dp"
-                android:textAlignment="viewEnd"
+                android:textAlignment="viewStart"
                 android:textColor="@android:color/holo_red_dark"
                 android:textSize="110dp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/hangProgressBar"
                 app:layout_constraintEnd_toEndOf="parent" />
 
