--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,12 +51,29 @@
             tools:layout_editor_absoluteX="140dp"
             tools:layout_editor_absoluteY="0dp">
 
-            <android.support.v4.view.ViewPager
-                android:id="@+id/view_pager"
+            <FrameLayout
                 android:layout_width="wrap_content"
-                android:layout_height="150dp">
+                android:layout_height="wrap_content">
 
-            </android.support.v4.view.ViewPager>
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/view_pager"
+                    android:layout_width="wrap_content"
+                    android:layout_height="150dp">
+
+
+                </android.support.v4.view.ViewPager>
+
+                <ImageView
+                    android:id="@+id/leftFingerImageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:alpha="0.8" />
+                <ImageView
+                    android:id="@+id/rightFingerImageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:alpha="0.8" />
+            </FrameLayout>
 
 
             <LinearLayout
