--- a/app/src/main/res/layout/swipe_layout.xml
+++ b/app/src/main/res/layout/swipe_layout.xml
@@ -6,6 +6,7 @@
 
     <ImageView
         android:id="@+id/image_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
 </LinearLayout>
